Fixed filter button mobile style

--- a/app/globals.css
+++ b/app/globals.css
@@ -3540,10 +3540,10 @@ video {
 
 .filter-btn-selected-mob:before {
   position: absolute;
-  height: 53%;
+  height: 52%;
   width: 107%;
   content: "";
-  top: -1.5px;
+  top: -0.5px;
   left: -9px;
   background: transparent;
   transform: perspective(40px) rotateX(15deg);
@@ -3552,9 +3552,9 @@ video {
 
 .filter-btn-selected-mob:after {
   position: absolute;
-  height: 59%;
+  height: 52%;
   width: 106%;
-  top: 21.5px;
+  top: 22.5px;
   left: -9px;
   content: "";
   background: transparent;
@@ -3580,10 +3580,10 @@ video {
 
 .filter-btn-mob:before {
   position: absolute;
-  height: 53%;
+  height: 52%;
   width: 106%;
   content: "";
-  top: -1.5px;
+  top: -0.5px;
   left: -9px;
   background: transparent;
   transform: perspective(40px) rotateX(15deg);
@@ -3592,9 +3592,9 @@ video {
 
 .filter-btn-mob:after {
   position: absolute;
-  height: 59%;
+  height: 52%;
   width: 106%;
-  top: 21.5px;
+  top: 22.5px;
   left: -9px;
   content: "";
   background: transparent;
